prototipo do slide adicionado, baseado nas aulas da origamid

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
     <div class="redes-sociais">
       <ul>
-        <li class="github"><a href="https://github.com/c4rloseduard0"></a></li>
-        <li class="twitter"><a href="https://twitter.com/c4rloseduard00"></a></li>
-        <li class="linkedin"><a href="https://linkedin.com/c4rloseduard0"></a></li>
+        <li class="github"><a target="_blank" href="https://github.com/c4rloseduard0"></a></li>
+        <li class="twitter"><a  target="_blank" href="https://twitter.com/c4rloseduard00"></a></li>
+        <li class="linkedin"><a  target="_blank" href="https://linkedin.com/c4rloseduard0"></a></li>
       </ul>
     </div>
 
     <nav class="menu">
       <ul>
-        <li><a href="#sobre">Sobre Mim</a></li>
+        <li><a class="ativo" href="#sobre">Sobre Mim</a></li>
         <li><a href="#formacao">Formação e Experiência</a></li>
         <li><a href="#portfolio">Portfólio</a></li>
         <li><a href="#contato">Contato</a></li>
@@ -50,7 +50,14 @@
     <section id="portfolio">
       <h2>Portfólio</h2>
       <div class="conteudo">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit fugit optio explicabo iusto, deserunt saepe commodi atque unde eum dolorum excepturi officia tempore voluptatum, ex odit, eligendi id delectus cum praesentium hic in illum at, dolores quasi. Animi enim atque expedita distinctio eius fuga, ea aut. Voluptates pariatur, quibusdam? In natus deleniti velit eaque ut aspernatur eos consequatur rem cupiditate numquam placeat mollitia, id corporis sit ratione adipisci similique beatae quo est unde sed, quae? Quia et reiciendis ut, eaque veritatis tempora dolorem ab eos quaerat est temporibus magni laboriosam, deleniti praesentium odit error harum id sequi! Id doloremque culpa modi ullam similique, eum, repellat nobis delectus vel nisi iste sunt eveniet. Molestias sed molestiae illo nostrum, praesentium aperiam deserunt voluptates, earum culpa, dolorem explicabo consequuntur, repellendus et iusto. Nihil porro voluptatum ullam odit accusamus maiores, libero, quibusdam soluta eos repellendus nulla dolore accusantium ipsa unde non dolorum consequatur iusto. Quam suscipit, consequuntur ut quae eum! Inventore ad cum tenetur magnam aperiam non impedit dolores nemo animi magni! Et ducimus eum perferendis ratione nihil natus nobis voluptatibus perspiciatis aliquid soluta facilis itaque praesentium, facere fugiat non pariatur delectus, aperiam sunt illum, dolorum mollitia aut. Nihil nulla tempore dolores ipsa, voluptas iusto vero eos error nesciunt, possimus omnis exercitationem eaque hic suscipit voluptate consequuntur molestias repellat illum ullam laborum quisquam! Dolorum iure nobis, corporis recusandae. Sequi facilis reiciendis numquam ipsa obcaecati, delectus reprehenderit, nesciunt, similique accusamus quod architecto, aut non. Perferendis aperiam non nulla, vitae atque necessitatibus nisi numquam officiis autem vero, debitis neque reiciendis tempora, accusantium minus quia aliquid doloremque aspernatur! Recusandae voluptatibus quia ratione similique aspernatur ullam repudiandae reprehenderit perferendis ipsa a at, impedit animi quo odit voluptates explicabo nostrum dolor, natus nihil distinctio enim maxime laboriosam. Sequi quo fugit sint assumenda nam voluptatibus ad, pariatur aut, quisquam veritatis minima? Ipsam odit porro suscipit voluptas repellat esse itaque dolorum, nemo temporibus a error sed debitis perspiciatis, blanditiis eveniet iure maxime ut molestias quis, ab commodi consequatur vitae officiis. Aut nisi perferendis rerum facere soluta aliquid, aperiam at a, in possimus eum necessitatibus eius nulla ipsum suscipit consequatur voluptatem animi debitis dolores voluptate tenetur velit? Id consectetur quos, pariatur ipsum accusantium eos sapiente illum alias nostrum distinctio temporibus labore nihil at saepe minima, expedita, ipsam quia quod excepturi officiis ullam. Debitis, neque possimus facilis numquam dolorem laborum itaque molestiae labore ipsam vero sed maiores accusamus voluptates facere nemo nihil, recusandae, at iste maxime eaque corrupti sint! Beatae dolore est, quas error iste ducimus neque dicta. Nobis doloribus ipsam iste ducimus nesciunt autem aperiam, dolore sit necessitatibus molestiae voluptatum iusto dolor, laudantium voluptas totam sequi, expedita eos unde cum? Delectus quod, eos nesciunt magni perferendis mollitia et, facere tempore ea consequuntur, quaerat, rem dolore eligendi veritatis sint sapiente distinctio totam repudiandae veniam! Molestiae, reiciendis amet nesciunt impedit deserunt earum nostrum, excepturi quidem provident ipsum consequatur quas praesentium nisi delectus consectetur velit! Nesciunt, commodi at recusandae, culpa nulla nam adipisci quam est dolor eveniet quo, aperiam maiores ipsum officiis id quisquam provident.</p>
+        <ul class="slide">
+          <li><img src="img/foto1.jpg" alt=""></li>
+          <li><img src="img/foto2.jpg" alt=""></li>
+          <li><img src="img/foto3.jpg" alt=""></li>
+          <li><img src="img/foto4.jpg" alt=""></li>
+          <li><img src="img/foto5.jpg" alt=""></li>
+          <li><img src="img/foto6.jpg" alt=""></li>
+        </ul>
       </div>
     </section>
 
@@ -78,7 +85,7 @@
         </form>
         <h3>Outras opções de contato</h3>
         <ul class="contatos">
-          <li class="wpp"><a href="https://api.whatsapp.com/send?phone=5588981463544&text=Bom%20dia%2C%20gostaria%20de%20conversar%20sobre%20seus%20servi%C3%A7os"><i class="fa fa-whatsapp fa-3x"></i></a></li>
+          <li class="wpp"><a  target="_blank" href="https://api.whatsapp.com/send?phone=5588981463544&text=Bom%20dia%2C%20gostaria%20de%20conversar%20sobre%20seus%20servi%C3%A7os"><i class="fa fa-whatsapp fa-3x"></i></a></li>
           <li class="mail"><a href="mailto:c4rloseduard0@outlook.com?subject=Bom%20dia%2C%20gostaria%20de%20conversar%20sobre%20seus%20servi%C3%A7os"><i class="fa fa-envelope-o fa-3x"></i></a></li>
           <li class="tel"><a href="tel:+5588981463544"><i class="fa fa-phone fa-3x" aria-hidden="true"></i></a></li>
         </ul>
