melhorias no slide

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <h2>Portfólio</h2>
       <div class="conteudo">
         <ul class="slide">
-          <li><img src="img/foto1.jpg" alt=""></li>
+          <li class="ativo"><img src="img/foto1.jpg" alt=""></li>
           <li><img src="img/foto2.jpg" alt=""></li>
           <li><img src="img/foto3.jpg" alt=""></li>
           <li><img src="img/foto4.jpg" alt=""></li>
