--- a/index.html
+++ b/index.html
@@ -51,12 +51,24 @@
       <h2>Portfólio</h2>
       <div class="conteudo">
         <ul class="slide">
-          <li class="ativo"><img src="img/foto1.jpg" alt=""></li>
-          <li><img src="img/foto2.jpg" alt=""></li>
-          <li><img src="img/foto3.jpg" alt=""></li>
-          <li><img src="img/foto4.jpg" alt=""></li>
-          <li><img src="img/foto5.jpg" alt=""></li>
-          <li><img src="img/foto6.jpg" alt=""></li>
+          <li>
+            <div class="slide-item">Projeto 1</div>
+          </li>
+          <li>
+            <div class="slide-item">Projeto 2</div>
+          </li>
+          <li>
+            <div class="slide-item">Projeto 3</div>
+          </li>
+          <li>
+            <div class="slide-item">Projeto 4</div>
+          </li>
+          <li>
+            <div class="slide-item">Projeto 5</div>
+          </li>
+          <li>
+            <div class="slide-item">Projeto 6</div>
+          </li>
         </ul>
       </div>
     </section>
